updated at: 2023-04-25 18:50, VRChat向けアクセサリー　丸メガネ - KOMONOBEYA - BOOTH

--- a/VRChat/88/1076788.html
+++ b/VRChat/88/1076788.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "ebeG7qlaZrJBKAPNsmgHZA2PwkwQ5vmWYxQ5aWunwR0="></script>
+    "aBnSYigUXfKVZH2Gxzo/sqUMIY4UXKXRGJ0Q8vlJ22E="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat向けアクセサリー　丸メガネ","description":"凄くシンプルなデザインの丸メガネです\n\n最近、いろんなところでメガネを見かけるようになってきました！もっと流行ってくれ丸メガネ！\n\nUnityPackageの配布になりますので導入も簡単に出来ます\n\n耳掛けの部分の付いているタイプと付いていないタイプがありますのでアバターに合わせて使用してください\n\n付属はしていませんが、レンズの部分にお休みさんの制作されているメガネ向けガラスシェーダーを使うことで反射などよりメガネらしさを表現できます！\n\n制作者:をたぱち\nhttps://twitter.com/_wtpc ご不明な点、バグなどございましたらご連絡いただけますと幸いです。","url":"https://booth.pm/ja/items/1076788","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/a1e47a5c-c994-4f91-9f96-57dc100ca505/i/1076788/72ee7e4f-bd19-4916-b0e1-05e97db8df84_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="ebeG7qlaZrJBKAPNsmgHZA2PwkwQ5vmWYxQ5aWunwR0="></script>
+    nonce="aBnSYigUXfKVZH2Gxzo/sqUMIY4UXKXRGJ0Q8vlJ22E="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,10 +160,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1076788/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              4260
+                              4267
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1076788/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              4260
+                              4267
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
