--- a/VRChat/12/1076512.html
+++ b/VRChat/12/1076512.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "KCM9XlBbS+WcuekpISXJT5EFghAGDGf+F3yxLz3O3Fc="></script>
+    "g8MfTxFrxQLdi913C8DQq6Xu0Cdu6FEcvufUsi2i5hE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"サンタ帽","description":"20分位で作ったサンタ帽\n\nクオリティ低め\n\nおすきにどうぞ～\n\n無料とブースト用の差は一切ありません","url":"https://booth.pm/ja/items/1076512","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/ddf3494d-9f44-4769-903e-58b0edd4032b/i/1076512/ac3c15de-d585-4558-a5e2-4860c7091765_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="KCM9XlBbS+WcuekpISXJT5EFghAGDGf+F3yxLz3O3Fc="></script>
+    nonce="g8MfTxFrxQLdi913C8DQq6Xu0Cdu6FEcvufUsi2i5hE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -113,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -156,7 +158,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1076512/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               16
@@ -171,14 +173,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1076512/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               16
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
