--- a/VRChat/09/1076309.html
+++ b/VRChat/09/1076309.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "EPBfPt32HNtii/B46Pff0I4vk6MlDoAwNdz3w+226h4="></script>
+    "Wr5CmB9oZhnKKss/HoYKVkY8YJuu6GcT61AsX965jX8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【無料】ソファー テクスチャ2種 △2034","description":"ポリゴン数:2034\nスタンダードシェーダーの使用を想定\n\nこの商品を利用したことで発生する損失やトラブル等に一切の責任を負いません。\nそれ以外は商用でもなんでもお好きに使ってください。","url":"https://booth.pm/ja/items/1076309","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/da15b300-8632-4664-a059-a7e1fbad1afa/i/1076309/dcd17dfb-b81c-4610-bc8c-02fb623aa422_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="EPBfPt32HNtii/B46Pff0I4vk6MlDoAwNdz3w+226h4="></script>
+    nonce="Wr5CmB9oZhnKKss/HoYKVkY8YJuu6GcT61AsX965jX8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +118,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -161,10 +163,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1076309/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              379
+                              380
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -176,14 +178,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1076309/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              379
+                              380
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
