--- a/VRChat/67/1075667.html
+++ b/VRChat/67/1075667.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "t1jDLYJwBjoiWOh55fLypclJDw3ZLAneack72NfNdN4="></script>
+    "bUKH4r7xDDt/JM4qF6/NRZXc8FusmQKP6sbG1tucDQk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"フレキシブルステッキ","description":"ぷるぷるするステッキの3Dモデルです。\nVRChatのアバターの頭に髪飾りとして付けるために作成しました。(嘘)\n改変、商用等、自由にご利用いただけます。","url":"https://booth.pm/ja/items/1075667","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/61e4610c-2d48-4d4b-b8e1-76e0985b5de8/i/1075667/f3ee01e6-5a69-40a2-a368-cf8ae2521452_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="t1jDLYJwBjoiWOh55fLypclJDw3ZLAneack72NfNdN4="></script>
+    nonce="bUKH4r7xDDt/JM4qF6/NRZXc8FusmQKP6sbG1tucDQk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +118,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -161,10 +163,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1075667/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              158
+                              157
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -176,14 +178,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1075667/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              158
+                              157
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
