--- a/VRChat/35/1075235.html
+++ b/VRChat/35/1075235.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "xJj6D2vEhMusQfhc1ZTVsTkZSHltQYniQYYLggoaRFA="></script>
+    "Jy6kcjyfhdTqkcqTs8uk3TNDfUyDgZr9c7WAy/nH2xQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"スタッフ証（注目看板つき）","description":"光り輝くスタッフ証です。\n自分が実際にイベントスタッフをさせていただいた際に作成・使用したものです。\n画像のとおり、暗い場所でもよくわかります。その分目立ちます。\n\n\n・内容物はunitypackageのみです\n・テクスチャは使用していませんので色変え自由です。\n\n※無料版もお布施用も内容に差はありません。\n\n\n\n★利用規約・導入などの説明はこちらをご覧ください。（ページ下部から該当シートを選んでください）\nhttps://docs.google.com/spreadsheets/d/1DCh-S5Rafb_NYJTQHtXame5xNWiDTWg5RKkcSiIdyXA/edit?usp=sharing","url":"https://booth.pm/ja/items/1075235","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/42ee0553-4a9c-4ab5-8673-ebcc9fd6f0be/i/1075235/29850427-00c4-44e7-ba30-25bd45a2965f_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="xJj6D2vEhMusQfhc1ZTVsTkZSHltQYniQYYLggoaRFA="></script>
+    nonce="Jy6kcjyfhdTqkcqTs8uk3TNDfUyDgZr9c7WAy/nH2xQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1075235/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               62
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1075235/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               62
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
