--- a/VRChat/35/1074435.html
+++ b/VRChat/35/1074435.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "AfMiiuNWAnM3qxgef61vAHa2F0ELvLBo4ICBpVDGq8g="></script>
+    "nMXGbj0UDAB5BpaSlMRtWHnBFPDFkXUEwHEv5hMSj9s="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRchat推奨】ニット帽3種","description":"ニット帽ができました。３種類です。今回は低ポリにこだわったのでこの耳当て付きのも６００以下です。シェイプキーで横幅調節できます。\n　\n内容物\nＦＢＸ３種　テクスチャセット（ベースマップ　ノーマル　メタリック）","url":"https://booth.pm/ja/items/1074435","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/97a252e6-17fb-4604-b972-5868719c8877/i/1074435/65de31ca-383b-448e-9923-07c6fef32958_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="AfMiiuNWAnM3qxgef61vAHa2F0ELvLBo4ICBpVDGq8g="></script>
+    nonce="nMXGbj0UDAB5BpaSlMRtWHnBFPDFkXUEwHEv5hMSj9s="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1074435/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               146
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1074435/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               146
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
