updated at: 2023-04-25 18:52, C Sharp Force バッジ - HALBY Laboratories - BOOTH

--- a/VRChat/88/1071588.html
+++ b/VRChat/88/1071588.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "Koytxxd+mkaDM3XGh4Pw9/Fa/YGYRsuh3ysxAJagfpQ="></script>
+    "0YvY+QAnfBRtvLiyiZ5GtL1FOrkyxjVkWzJeCxcfBSM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"C Sharp Force バッジ","description":"C Sharp Forceのバッジです。\n活動内容、条件などはとくにありませんので、VRChatでC#について話してみたい、みたいな方はどなたでも自由にご利用いただけます。\n改変、再配布も自由です。","url":"https://booth.pm/ja/items/1071588","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/64d6cf4e-7b03-4338-9fdc-ca5b8647d504/i/1071588/2c0325e2-40dc-49a6-83a9-99f83f98525f_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Koytxxd+mkaDM3XGh4Pw9/Fa/YGYRsuh3ysxAJagfpQ="></script>
+    nonce="0YvY+QAnfBRtvLiyiZ5GtL1FOrkyxjVkWzJeCxcfBSM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1071588/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               20
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1071588/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               20
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
