updated at: 2023-04-25 18:53, ボクセルレッサーモクリ（南条式） - nanjou0621 - BOOTH

--- a/VRChat/24/1070924.html
+++ b/VRChat/24/1070924.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "xtz2wyZdg8Si+NCVc1GbYLuDMzGj4GOuWPaE5LPBtj8="></script>
+    "QoRxqL3bsU05jHm++MQzq5XS2iQqs0DhBXLc+2pazsQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ボクセルレッサーモクリ（南条式）","description":"VRChatとバーチャルキャストでの利用を想定したモデルです。\n導入がすぐできるようになってますので楽しんでください！\n18594ポリゴン\n\n利用規約はファンメイド作品になりますので、レッサーモクリ公式の利用規約内での利用をお願いします。\nhttp://mokuri.world/二次創作について/\n\n製作者：南条\nVRChat ID:Nanjou\nTwitter ID:domyoji099","url":"https://booth.pm/ja/items/1070924","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/66272468-a0f6-4b14-9c49-f8687560ee2c/i/1070924/2eb7d733-bb71-4652-8442-fd402bf5255f_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="xtz2wyZdg8Si+NCVc1GbYLuDMzGj4GOuWPaE5LPBtj8="></script>
+    nonce="QoRxqL3bsU05jHm++MQzq5XS2iQqs0DhBXLc+2pazsQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -153,7 +155,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1070924/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               17
@@ -168,14 +170,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1070924/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               17
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
