updated at: 2023-04-25 18:53, 3Dモデル コムラサキ - booooooh屋 - BOOTH

--- a/VRChat/96/1070896.html
+++ b/VRChat/96/1070896.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "HlQpuxnmmoD85Gk5l8wQXQycITcLaJckXWazhHgvyDw="></script>
+    "5cAoxQQleTeJgiQi6pzlkn4azOmyzc5i0gzsOfV82bU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"3Dモデル コムラサキ","description":"MagicaVoxelにて作成された3Dモデルです。\nVRChatやその他ゲームなどのデジタルコンテンツにご利用いただけます。\n\n\n本モデルを購入した時点で本利用規約に同意したものとします。\n利用規約の内容は変更する場合があり、最新のものが適用されます。\n\n・本モデル、改造モデル著作権はほーのき（booooooh522）に帰属するものとします。\n・本モデルデータを使って制作された作品（動画・画像・ゲーム等）で対価を得る等、営利目的での使用は可能です。\n・本モデルデータの改変は自由です。\n・R-18, R-18Gコンテンツでの利用は自由です。\n・利用者が、二次創作で改変したモデルデータを配布することは禁止します。\n\n","url":"https://booth.pm/ja/items/1070896","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/766abe90-a3ce-40ec-829e-ee51f60a5e39/i/1070896/31ab00b0-4361-451f-b908-0a8a5e3c372c_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="HlQpuxnmmoD85Gk5l8wQXQycITcLaJckXWazhHgvyDw="></script>
+    nonce="5cAoxQQleTeJgiQi6pzlkn4azOmyzc5i0gzsOfV82bU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -153,7 +155,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1070896/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               16
@@ -168,14 +170,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1070896/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               16
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
