updated at: 2023-04-25 18:54, 【VRchatAvatar】Ayana【制服冬服ver】 - ig_kのお店♪ - BOOTH

--- a/VRChat/40/1068940.html
+++ b/VRChat/40/1068940.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "8WIydxrM08CSf9JuatD0b+9E7AXnly5UIoc3J88fJ1c="></script>
+    "Y7hf7NItq+ySPiNm2gX7MBVr9rdhThmJgxdiYj7wWhg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRchatAvatar】Ayana【制服冬服ver】","description":"オリジナル3Dモデル「Ayana」紹介\n\nVRchatを想定した3DCGモデルです。\nその他、ゲーム、アニメーション、配信等もOKです。\nVRchat用のリップシンク、まばたき以外にも、複数モーフを作成しています。\n改変もどんどん行って頂いて大丈夫です。\nまた、頭部を別のモデルに代えて、衣装として使用して頂てもかませいません。\n\nアイトラッキング対応済み\nフルトラッキングは対応しておりますが、環境がないためテストはしておりません。\nIdleアニメーション付きです！\nデスクトップの方にもおすすめです！\n\n利用条件は当データの再配布と販売以外はほぼ何をして頂いてもかまいませんので、よかったら楽しんでやってください！","url":"https://booth.pm/ja/items/1068940","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1000"},"image":"https://booth.pximg.net/c/620x620/59389fe7-f5ec-46ed-8ba3-90b7d78a625e/i/1068940/a483fe26-2522-4102-ab90-889d022a066c_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="8WIydxrM08CSf9JuatD0b+9E7AXnly5UIoc3J88fJ1c="></script>
+    nonce="Y7hf7NItq+ySPiNm2gX7MBVr9rdhThmJgxdiYj7wWhg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1068940/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               20
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1068940/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               20
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
