updated at: 2023-04-25 18:54, オリジナル３Dモデル　『みみの』　Quest版オマケ付き - Legacy System Works - BOOTH

--- a/VRChat/33/1336133.html
+++ b/VRChat/33/1336133.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "BdYSz8BGeHVZltEOwqdo9zqlrGxSehjTPr+CAgSH8HI="></script>
+    "9tkk+qaeCht7vxY+OoyM1cbgRYI6R7qUZnkCzjNGqmc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル３Dモデル　『みみの』　Quest版オマケ付き","description":"Humanoid形式対応のオリジナル3Dモデルです。\n主にVRChatでの使用を想定していますが、動画配信等でもご利用いただけます。\n\n\nポリゴン数：31915ポリゴン\nリップシンク:5種類（あ・い・う・え・お）\nシェイプキー33種類\nフルボディトラッキング対応\n素体なし\n\n改変の際はLSbodyをご利用ください(https://lsw.booth.pm/items/2018942)\n\n■同梱データ\n\nUnity package file\nFBX　モデルデータ\nPNG　テクスチャデータ\nPSD　改変用テクスチャデータ\nPSD(ADV)　改変用テクスチャデータ※\n\n※PSDデータにグラデーションマップを使用しており、\nこちらはPhotoshop CC、もしくはCLIP STUDIO PRO(EXは未確認ですがおそらく可)が必須となります。\n\n■Quest版について\n\nクロスマーケット運営さんのご厚意により制作されたオマケデータとなります。\n作者が異なるため、今後のアップデートや不具合修正等が難しいですが、あくまでオマケとして割り切って遊んで頂ければ幸いです。","url":"https://booth.pm/ja/items/1336133","offers":{"priceCurrency":"JPY","@type":"Offer","price":"3600"},"image":"https://booth.pximg.net/c/620x620/1c35c496-0283-4684-8543-7149d9a7eb62/i/1336133/054367b1-071e-4ae5-a038-6bd4f10336c6_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="BdYSz8BGeHVZltEOwqdo9zqlrGxSehjTPr+CAgSH8HI="></script>
+    nonce="9tkk+qaeCht7vxY+OoyM1cbgRYI6R7qUZnkCzjNGqmc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -122,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -136,7 +135,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -178,10 +178,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1336133/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              3637
+                              3639
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -193,14 +193,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1336133/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              3637
+                              3639
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
