updated at: 2023-04-25 18:57, VRCHierarchyHighlighter - 藍銅鉱技研 - BOOTH

--- a/VRChat/73/1326573.html
+++ b/VRChat/73/1326573.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "3pz6g71yjnBeuCcppnGPmQ/DgI3V/FJlBKAiAbDlNps="></script>
+    "iQwApFRU58zJO7g8RYkTMXoqiHiYfW7DjqHBUqjhqpQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRCHierarchyHighlighter","description":"ヒエラルキの階層表示をハイライトで強調表示するのと、\nVRCで扱う重要コンポーネントをアイコンで表示するやつです。\n\n注意: VRChatが2019対応するためUnity2018LTS用は今後サポートしません\n\n対応コンポーネントは、\n* VRC_AvaterDescriptor\n* VRC_MirrorReflection\n* MeshRenderer\n* SkinnedMeshRenderer\n* DynamicBone\n* Physics Bone\n* AudioSource\n* Light\n* LightProbeGroup\n* ReflectionProbe\nです。\n（今後Rigidbody, Joint, Clothなどに対応するかもしれません）\n\nこのエディタ拡張を導入することによって、\n間違った階層にオブジェクトを突っ込むリスクを下げたり、オブジェクトにちゃんとDynamicBoneが適用されているのか、\nどのオブジェクトがVRCのアバターコンポーネントを持っているのか、メッシュ構造を持っているのかを可視化することが出来ます。","url":"https://booth.pm/ja/items/1326573","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"300"},"image":"https://booth.pximg.net/c/620x620/6bdf2df7-47d0-4756-8dfe-1337da79c2a3/i/1326573/6b65d797-979a-4d10-947b-934fabee27c2_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="3pz6g71yjnBeuCcppnGPmQ/DgI3V/FJlBKAiAbDlNps="></script>
+    nonce="iQwApFRU58zJO7g8RYkTMXoqiHiYfW7DjqHBUqjhqpQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,10 +164,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1326573/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              1469
+                              1474
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1326573/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              1469
+                              1474
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
