updated at: 2023-04-25 18:58, 【無料】指輪3 15個セット　 - 雑貨屋 - BOOTH

--- a/VRChat/47/1325947.html
+++ b/VRChat/47/1325947.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "b9elnndRG15tamC+T8LKFcUm4azXqNlAEbLsyPMGRNc="></script>
+    "tQhG0rt6pVVCEDRCEBKR+oWXxXK5GdCltE6TnlIffcA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【無料】指輪3 15個セット　","description":"指輪はNo,31～No,45の計15個のセット\n\nセット内容\n　README\n　指輪（リング）No31～№45\n　指輪見本（JPG）\n\nポリゴン数 最小△200～最大△1552\nshader スタンダード うにショップ様のcrystal shader\n\n例のごとくUV展開は一切しておらず、マテリアルでのみの配色となっております。","url":"https://booth.pm/ja/items/1325947","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"500"},"image":"https://booth.pximg.net/c/620x620/b192de80-ab9a-405c-a8c2-559c78ffe3e6/i/1325947/0aea0972-a364-4d0b-865a-ba7051b1161d_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="b9elnndRG15tamC+T8LKFcUm4azXqNlAEbLsyPMGRNc="></script>
+    nonce="tQhG0rt6pVVCEDRCEBKR+oWXxXK5GdCltE6TnlIffcA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1325947/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               101
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1325947/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               101
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
