updated at: 2023-04-25 19:00, 紫陽花コサージュ - 水無月堂💠 - BOOTH

--- a/VRChat/02/1334602.html
+++ b/VRChat/02/1334602.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "Bn1QURMqF+cxCsoLm/FTEdcq5dmAU/psAzqGQsvX+Cg="></script>
+    "PjfTXISZK4/nAbVVYPGmgSTEIG1oJ3SNuVcYcs/qWlo="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"紫陽花コサージュ","description":"紫陽花のコサージュこれからの時期にいかかでしょうか？\n△6660　Mesh数4　個人向けに製作したものを置いておきます。\n\n追記\n19.04.29　lowﾎﾟﾘ版(△1770)を追加。葉っぱのﾃｸｽﾁｬ追加しました。\n写真の三枚目がﾛｰﾎﾟﾘ版+はっぱﾃｸｽﾁｬ,4枚目がﾊｲﾎﾟﾘ版+はっぱﾃｸｽﾁｬとなります。\n\n19.05.07取付例を追加。\n\n～～～～～\n\n・改変：自由\n\n・著作者人格権：著作権法59条に準ずる \n\n・著作権：著作権法第17条第1項に従い、画像並びモデルデータに関するオリジナルデータ及びファイル名についてのみ作者に帰属 \n\n・禁止事項：作者であると偽称すること　他者がDLできる状態にすること及び販売\n\n・本モデルを利用したことによって生じるいかなる損害に対して当方は一切責任を負いません \n","url":"https://booth.pm/ja/items/1334602","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/7d93d93e-114f-40fb-9296-c373f0f3b305/i/1334602/9d1f1e75-b8b8-493d-ad48-960005912b62_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Bn1QURMqF+cxCsoLm/FTEdcq5dmAU/psAzqGQsvX+Cg="></script>
+    nonce="PjfTXISZK4/nAbVVYPGmgSTEIG1oJ3SNuVcYcs/qWlo="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -113,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -156,7 +158,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1334602/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               48
@@ -171,14 +173,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1334602/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               48
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
