updated at: 2023-04-25 19:01, VRC_アバター認証ドア - nelron - BOOTH

--- a/VRChat/33/1333833.html
+++ b/VRChat/33/1333833.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "PY+xLd7ImrrsCS7fKaUgF4wQxVKDrjG8qTMlXKIV4sU="></script>
+    "Pn9+Ukh+fcEapd/7nhX1xB0AxT/uLO6mRqhQEWW9YtM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRC_アバター認証ドア","description":"VRChat用ワールドギミック「アバター認証ドア」です。\n特定のコライダーアニメーションを搭載したアバターを用いるとドアを開けることができます。詳しくは付属の説明書をご覧ください。\n後日，対応アバターと詳細な解説動画を公開します。\n\n　BOOTHからダウンロードしていただく場合は，zipファイルを解凍する必要があります。最近のWindowsは標準で解凍ソフトウェアが付属していると思いますが，右クリックとかでごちゃごちゃやっても開けない場合は「windows zipファイル　解凍」とかで検索してみてください。\n\n参考動画: https://twitter.com/eoseph/status/1114433244349390849\n解説動画　概要編: https://youtu.be/_YP7HaX2lbE","url":"https://booth.pm/ja/items/1333833","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"}}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="PY+xLd7ImrrsCS7fKaUgF4wQxVKDrjG8qTMlXKIV4sU="></script>
+    nonce="Pn9+Ukh+fcEapd/7nhX1xB0AxT/uLO6mRqhQEWW9YtM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1333833/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               116
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1333833/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               116
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
